# otg-test

./: .gitignore  README.md  analyze_test_v2.py  configure_otg_lacp.py  configure_otg_static_lag.py  mcp_servers_config.json  otg-test.clab.yml  otg-test.drawio  otg_log_results.json  otg_logger.py  run_disruption_test.py  validate_traffic_simple.py
configs/: leaf1.cfg  leaf2.cfg  leaf3.cfg  leaf4.cfg  spine1.cfg  spine2.cfg
configs/antigravity/: mcp_servers_config.json  mcp_servers_config_template.json
configs/network-equipment/: spine1.cfg
configs/telemetry/: gnmic-config.yml  loki-config.yml  prometheus.yml  promtail-config.yml
configs/telemetry/grafana/dashboards/: device-overview.json  fabric-health.json  interface-stats.json  l3-telemetry.json
loki-mcp/: Dockerfile  server.py
mcp-servers/loki-mcp/: README.md  pyproject.toml
mcp-servers/otg-mcp/: .gitignore  Dockerfile  README.md  otg-mcp-config.json  pyproject.toml  requirements.txt  start_mcp.sh
mcp-servers/otg-mcp/src/otg_mcp/: __main__.py  client.py  client_capture.py  config.py  schema_registry.py  server.py
mcp-servers/otg-mcp/src/otg_mcp/models/: __init__.py  models.py
mcp-servers/prometheus-mcp/: README.md  pyproject.toml  start_prometheus_mcp.sh
mcp-servers/prometheus-mcp/src/prometheus_mcp/: server.py
png/: mcp-architecture-local.drawio  mcp-architecture.drawio  otg-test.drawio  otg-test2.drawio
samples/: analyze_test.py  client_demo.py  inspect_snappi.py  otg_cli.py  traffic_scenario.py
telemetry/: gnmic-config.yml
telemetry/grafana/datasources/: datasource.yaml
