[project]
name = "loki-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for Grafana Loki"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.27.0",
    "uvicorn",
    "fastapi"
]

[project.scripts]
loki-mcp = "loki_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
