[project]
name = "prometheus-mcp"
version = "0.1.0"
description = "MCP Server for Prometheus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
prometheus-mcp = "prometheus_mcp.server:main"
